// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders Col correctly 1`] = `
<Styled(Box)
  className="myClass"
  lg={8}
  md={6}
  sm={4}
  style={
    Object {
      "width": "50px",
    }
  }
  xs="hidden"
/>
`;

exports[`Grid renders Grid correctly 1`] = `
<Styled(Box)
  className="myClass"
  style={
    Object {
      "width": "50px",
    }
  }
/>
`;

exports[`Grid renders Grid with Row & Col correctly 1`] = `
<Grid
  className="myClass"
  style={
    Object {
      "width": "50px",
    }
  }
>
  <Styled(Box)
    className="myClass"
    style={
      Object {
        "width": "50px",
      }
    }
  >
    <Box
      className="sc-jSFkmK ccghuS myClass"
      style={
        Object {
          "width": "50px",
        }
      }
    >
      <Component
        className="sc-jSFkmK ccghuS myClass"
        style={
          Object {
            "width": "50px",
          }
        }
        theme={
          Object {
            "disabledBackground": "#e2e2e2",
            "disabledfont": "#9d9d9d",
            "inputBackground": "#ffffff",
            "inputBorder": "#e2e2e2",
            "inputFont": "#9d9d9d",
            "label": "#2d2d2d",
            "primary": "#3fbaca",
            "secondary": "#293346",
          }
        }
      >
        <styled.div
          className="sc-jSFkmK ccghuS myClass"
          style={
            Object {
              "width": "50px",
            }
          }
          theme={
            Object {
              "disabledBackground": "#e2e2e2",
              "disabledfont": "#9d9d9d",
              "inputBackground": "#ffffff",
              "inputBorder": "#e2e2e2",
              "inputFont": "#9d9d9d",
              "label": "#2d2d2d",
              "primary": "#3fbaca",
              "secondary": "#293346",
            }
          }
        >
          <div
            className="sc-bdnylx dOPKTt sc-jSFkmK ccghuS myClass"
            style={
              Object {
                "width": "50px",
              }
            }
          >
            <Row
              className="myClass"
              style={
                Object {
                  "width": "50px",
                }
              }
            >
              <Styled(Box)
                className="myClass"
                style={
                  Object {
                    "width": "50px",
                  }
                }
              >
                <Box
                  className="sc-gKAblj ghkgCc myClass"
                  style={
                    Object {
                      "width": "50px",
                    }
                  }
                >
                  <Component
                    className="sc-gKAblj ghkgCc myClass"
                    style={
                      Object {
                        "width": "50px",
                      }
                    }
                    theme={
                      Object {
                        "disabledBackground": "#e2e2e2",
                        "disabledfont": "#9d9d9d",
                        "inputBackground": "#ffffff",
                        "inputBorder": "#e2e2e2",
                        "inputFont": "#9d9d9d",
                        "label": "#2d2d2d",
                        "primary": "#3fbaca",
                        "secondary": "#293346",
                      }
                    }
                  >
                    <styled.div
                      className="sc-gKAblj ghkgCc myClass"
                      style={
                        Object {
                          "width": "50px",
                        }
                      }
                      theme={
                        Object {
                          "disabledBackground": "#e2e2e2",
                          "disabledfont": "#9d9d9d",
                          "inputBackground": "#ffffff",
                          "inputBorder": "#e2e2e2",
                          "inputFont": "#9d9d9d",
                          "label": "#2d2d2d",
                          "primary": "#3fbaca",
                          "secondary": "#293346",
                        }
                      }
                    >
                      <div
                        className="sc-bdnylx dOPKTt sc-gKAblj ghkgCc myClass"
                        style={
                          Object {
                            "width": "50px",
                          }
                        }
                      >
                        <Col
                          className="myClass"
                          lg={8}
                          md={6}
                          sm={4}
                          style={
                            Object {
                              "width": "50px",
                            }
                          }
                          xs="hidden"
                        >
                          <Styled(Box)
                            className="myClass"
                            lg={8}
                            md={6}
                            sm={4}
                            style={
                              Object {
                                "width": "50px",
                              }
                            }
                            xs="hidden"
                          >
                            <Box
                              className="sc-iCoHVE fpJUgX myClass"
                              lg={8}
                              md={6}
                              sm={4}
                              style={
                                Object {
                                  "width": "50px",
                                }
                              }
                              xs="hidden"
                            >
                              <Component
                                className="sc-iCoHVE fpJUgX myClass"
                                lg={8}
                                md={6}
                                sm={4}
                                style={
                                  Object {
                                    "width": "50px",
                                  }
                                }
                                theme={
                                  Object {
                                    "disabledBackground": "#e2e2e2",
                                    "disabledfont": "#9d9d9d",
                                    "inputBackground": "#ffffff",
                                    "inputBorder": "#e2e2e2",
                                    "inputFont": "#9d9d9d",
                                    "label": "#2d2d2d",
                                    "primary": "#3fbaca",
                                    "secondary": "#293346",
                                  }
                                }
                                xs="hidden"
                              >
                                <styled.div
                                  className="sc-iCoHVE fpJUgX myClass"
                                  lg={8}
                                  md={6}
                                  sm={4}
                                  style={
                                    Object {
                                      "width": "50px",
                                    }
                                  }
                                  theme={
                                    Object {
                                      "disabledBackground": "#e2e2e2",
                                      "disabledfont": "#9d9d9d",
                                      "inputBackground": "#ffffff",
                                      "inputBorder": "#e2e2e2",
                                      "inputFont": "#9d9d9d",
                                      "label": "#2d2d2d",
                                      "primary": "#3fbaca",
                                      "secondary": "#293346",
                                    }
                                  }
                                  xs="hidden"
                                >
                                  <div
                                    className="sc-bdnylx dOPKTt sc-iCoHVE fpJUgX myClass"
                                    style={
                                      Object {
                                        "width": "50px",
                                      }
                                    }
                                  >
                                    Col
                                  </div>
                                </styled.div>
                              </Component>
                            </Box>
                          </Styled(Box)>
                        </Col>
                      </div>
                    </styled.div>
                  </Component>
                </Box>
              </Styled(Box)>
            </Row>
          </div>
        </styled.div>
      </Component>
    </Box>
  </Styled(Box)>
</Grid>
`;

exports[`Grid renders Row correctly 1`] = `
<Styled(Box)
  className="myClass"
  style={
    Object {
      "width": "50px",
    }
  }
/>
`;
